--- a/Chrome-Dino-Game/styles.css
+++ b/Chrome-Dino-Game/styles.css
@@ -22,6 +22,19 @@ body{
     height: 100%;
 }
 
+.playerJump{
+    animation: playerJump 1s linear;
+}
+
+@keyframes playerJump {
+    0%{
+        bottom: 190px;
+    }
+    45%, 55%{
+        bottom: 300px;
+    }
+}
+
 #background{
     position: absolute;
     width: 100%;
@@ -36,20 +49,6 @@ body{
 
 }
 
-
-.playerJump{
-    animation: playerJump 1s linear;
-}
-
-@keyframes playerJump {
-    0%{
-        bottom: 190px;
-    }
-    45%, 55%{
-        bottom: 300px;
-    }
-}
-
 @keyframes animatedBackground {
   from {
     background-position: 0 0;
@@ -58,3 +57,63 @@ body{
     background-position: -10000px 0;
   }
 }
+
+#cactus{
+    position: absolute;
+    bottom: 180px;
+    right: 0px;
+    height: 80px;
+    width: 55px;
+}
+
+.animatedCactus{
+    animation: movementCactus 2s linear infinite;
+}
+
+#cactus img{
+    max-width: 100%;
+    max-height: 100%;
+}
+
+#scoreContainer{
+    text-align-last: center;
+    font-size: 50px;
+    margin-top: 20px;
+}
+
+@keyframes movementCactus {
+    0% {
+        right: 0%;
+    }
+    100%{
+        right: 100%;
+    }
+}
+
+.menu{
+    display: flex;
+    justify-content: center;
+}
+
+.button.play, .button.reset {
+  border-style: solid;
+  border-width: 37px 0 37px 60px;
+}
+
+.button {
+  border: 0;
+  background: transparent;
+  box-sizing: border-box;
+  width: 0;
+  height: 74px;
+  border-color: transparent transparent transparent #202020;
+  transition: 1000ms all ease;
+  cursor: pointer;
+  border-style: double;
+  border-width: 0px 0 0px 60px;
+}
+
+.button:hover {
+  border-color: transparent transparent transparent #404040;
+}
+
